# lazygh

./: .gitignore  Cargo.toml  LICENSE  README.md  artifacts.json  changelog.rss  demo.cast  index.html  lazygh-installer.ps1.txt  lazygh-installer.sh.txt  oranda.json
.github/workflows/: ci.yml  release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.5.0/: index.html
public/: artifacts.json  changelog.rss  index.html  lazygh-installer.ps1.txt  lazygh-installer.sh.txt
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
src/: app.rs  db.rs  main.rs
wix/: main.wxs
