[package]
name = "github-account-tui"
version = "0.1.0"
authors = ["Karan Janthe <karanjanthe@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
color-eyre = "0.6.3"
arboard = "3.4.1"
regex = "1.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
dirs = "4.0"